<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@android:color/white"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/landlord_rent_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:text="@string/bill_tenants"
        android:textColor="@color/colorDarkBlue"
        android:textSize="27sp"
        android:fontFamily="sans-serif-thin"/>

    <LinearLayout
        android:id="@+id/bill_tenants_underline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:background="@color/colorAccentBlue"
        android:layout_below="@id/landlord_rent_title"/>

    <RelativeLayout
        android:id="@+id/input_bill_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="5dp"
        android:background="@drawable/bill_input_box"
        android:layout_below="@id/bill_tenants_underline">

        <TextView
            android:id="@+id/text_choose_tenant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/choose_tenant_to_bill"
            android:textSize="12sp"
            android:textStyle="italic"
            android:fontFamily="sans-serif"
            android:textColor="@color/colorDarkBlue" />

        <Spinner
            android:id="@+id/spinner_landlord_billpay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/text_choose_tenant"/>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_bill_amount_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinner_landlord_billpay"
            android:padding="5dp">

            <EditText
                android:id="@+id/input_bill_amount"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_amount"
                android:inputType="numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_message_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_bill_amount_wrapper"
            android:padding="5dp">

            <EditText
                android:id="@+id/input_bill_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_message" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_choose_due_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/date_button"
            android:text="@string/choose_due_date"
            android:textColor="@color/colorSalmon"
            android:padding="12dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="5dp"
            android:layout_below="@id/input_message_wrapper"/>

        <Button
            android:id="@+id/button_send_bill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/submit_bill_button"
            android:text="@string/submit"
            android:textColor="@color/colorAccentBlue"
            android:layout_marginEnd="8dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/input_message_wrapper" />

    </RelativeLayout>



    <TextView
        android:id="@+id/bill_history_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bill_history"
        android:textSize="20sp"
        android:textColor="@color/colorDarkBlue"
        android:fontFamily="sans-serif-thin"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_below="@id/input_bill_box"/>

        <ListView
            android:id="@+id/listview_landlord_bill_history"
            android:layout_width="match_parent"
            android:layout_height="331dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_below="@id/bill_history_title"
            android:divider="@color/colorAccentBlue"
            android:footerDividersEnabled="false"
            android:dividerHeight="1dp" />

</RelativeLayout>

